homepage/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: homepage
  namespace: homepage
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: Homepage
    gethomepage.dev/group: Dashboards
spec:
  type: ClusterIP
  selector:
    app: homepage
  ports:
    - name: http
      port: 80
      targetPort: http
